src/test/test-models/bad/err-transformed-params.stan
parameters {
  real y;
}
transformed {
}
model {
}
